--- a/vercel.json
+++ b/vercel.json
@@ -1,8 +1,8 @@
 {
-  "routes": [
-    {
-      "src": "/(.*)",
-      "middleware": "middleware"
+  "version": 2,
+  "functions": {
+    "middleware.js": {
+      "runtime": "edge"
     }
-  ]
+  }
 }
